--- a/watchlist/templates/course/all_courses.html
+++ b/watchlist/templates/course/all_courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ALL courses</title>
+	<title>All Courses</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
