--- a/watchlist/templates/my_courses_teacher.html
+++ b/watchlist/templates/my_courses_teacher.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My courses</title>
-	<link rel="stylesheet" href="/static/style_teacher.css" />
+	<title>My Course</title>
+	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
-{% for message in get_flashed_messages() %}
-
-    <div class="alert">{{ message }}</div>
-
-{% endfor %}
+	{% for message in get_flashed_messages() %}
+	    <div class="alert" style="float:left;margin-left:45%;margin-top:8px;text-align:center;font-size:18px;color:black;width:20%;font-weight:bold;">
+	    	{{ message }}
+	    </div>
+	{% endfor %}
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
@@ -19,18 +19,15 @@
 	        </div>
 
 			<div id="other">
-				<div id="userinfo">
-					<select name="user" id="user" onchange="window.location=this.value;">
-						<option selected="selected" value="0" class="userselect">
-							<span>{{ current_user.username }}</span>
-						</option>
-						<option value="/teacher_notice/" class="userselect">通知</option>
-						<option value="/logout/" class="userselect">退出登录</option>
-					</select>
-				</div>
-				<div id="user_img">
-					<img src="{{ current_user.pic_path }}" alt="image">
-				</div>				
+				<form form method="POST" action="/logout/">
+					<a id="login_out" href="/logout/" class="button">退出登录</a>
+					<div id="user_img">
+						<img src="{{ current_user.pic_path }}" alt="image">
+					</div>
+					<div id="user_name">
+						<span>{{ current_user.username }}</span>
+					</div>
+				</form>			
 			</div>
 		</div>
 
@@ -60,7 +57,7 @@
 						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/GPUs/">GPU列表</a>
+						<a href="/process_teacher/">GPU列表</a>
 					</div>
 				</div>
 
@@ -74,65 +71,32 @@
 				</div>
 			</div>
 
-			<div id="content">
-				<div id="程序设计" class="index_box">
-					<a href="/my_courses_teacher/1/">
-						<div class="index_img">
-							<img src="/static/pic/courses.png" alt="">
-						</div>
-						程序设计基础
-					</a>
-					<div id="程序设计info" class="information">
-						<div id="teacherpic" class="teacherpic">
-							<img src="/static/pic/teacher.png" alt="">
-						</div>
-						<strong id="程序设计teacher">选课人数 - 104&nbsp</strong>
-						<span id="程序设计term">2017-2018学年&nbsp第1学期</span>
-						<div class="courseintro">
-							<p>课程简介：xxx</p>
-						</div>
-						
-					</div>
-				</div>
-
-				<div id="人工智能原理" class="index_box">
-					<a href="/my_courses_teacher/2/">
-						<div class="index_img">
-							<img src="/static/pic/courses.png" alt="">
-						</div>
-						人工智能原理
-					</a>
-					<div id="人工智能原理info" class="information">
-						<div id="teacherpic" class="teacherpic">
-							<img src="/static/pic/teacher.png" alt="">
-						</div>
-						<strong id="人工智能原理teacher">选课人数 - 104</strong> 
-						<span id="人工智能原理term">2017-2018学年&nbsp第1学期</span>
-						<div class="courseintro">
-							<p>课程简介：xxx</p>
+				<div id="content">
+					{% for r in relations %}
+					{% for c in courses %}
+					{% if c['name'] == r['course_name'] %}
+					<div id="程序设计" class="index_box">
+						<a href="/my_courses_teacher/{{ c['id'] }}/">
+							<div class="index_img">
+								<img src="/static/pic/courses.png" alt="">
+							</div>
+							{{ c['name'] }}
+						</a>
+						<div id="程序设计info" class="information">
+							<div id="teacherpic" class="teacherpic">
+								<img src="/static/pic/teacher.png" alt="">
+							</div>
+							<strong id="程序设计teacher">{{ c['teacher'] }}&nbsp</strong>
+							<span id="程序设计term">{{ c['time'] }}</span>
+							<div class="courseintro">
+								<p>课程简介：{{ c['info'] }}</p>
+							</div>
+							
 						</div>
 					</div>
-				</div>
-
-				<div id="xxx" class="index_box">
-					<a href="/my_courses_teacher/3/">
-						<div class="index_img">
-							<img src="/static/pic/courses.png" alt="">
-						</div>
-						xxx实验室
-					</a>
-					<div id="xxxinfo" class="information">
-						<div id="teacherpic" class="teacherpic">
-							<img src="/static/pic/teacher.png" alt="">
-						</div>
-						<strong id="xxxteacher">xxx&nbsp</strong> 
-						<span id="xxxterm">xxx学年&nbsp第xx学期</span>
-						<div class="courseintro">
-							<p>课程简介：xxx</p>
-						</div>
-					</div>
-				</div>
-				
+					{% endif %}
+					{% endfor %}
+					{% endfor %}
 				<div id="add" class="index_box">
 					<a href="/new_courses/">
 						<div class="index_img">
