--- a/watchlist/templates/process_teacher.html
+++ b/watchlist/templates/process_teacher.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-	<title>添加课程</title>
+	<title>GPU列表</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
+
 <body>
 	{% for message in get_flashed_messages() %}
-	    <div class="alert" style="float:left;margin-left:45%;margin-top:8px;text-align:center;font-size:18px;color:black;width:20%;font-weight:bold;">
-	    	{{ message }}
-	    </div>
+	<div class="alert"
+		style="float:left;margin-left:45%;margin-top:8px;text-align:center;font-size:18px;color:black;width:20%;font-weight:bold;">
+		{{ message }}
+	</div>
 	{% endfor %}
 	<div id="container">
-		<div id="header" >
+		<div id="header">
 			<div id="logo">
-	            <img src="/static/pic/logo.png" alt="">
-	            <span>GPU管理系统</span>
-	        </div>
+				<img src="/static/pic/logo.png" alt="">
+				<span>GPU管理系统</span>
+			</div>
 
 			<div id="other">
 				<form form method="POST" action="/logout/">
@@ -27,7 +30,7 @@
 					<div id="user_name">
 						<span>{{ current_user.username }}</span>
 					</div>
-				</form>			
+				</form>
 			</div>
 		</div>
 
@@ -71,10 +74,48 @@
 				</div>
 			</div>
 
-			
+			<div id="content">
+				{% for r in relations %}
+
+				{% for c in courses %}
+				{% if c['name']==r['course_name'] %}
+				{% for g in gpus %}
+				{% if g['course_name']==c['name'] %}
+				<div id="gpu_process" class="index_box">
+					<a href="/GPUs/{{g['id']}}/">
+						<div class="index_img">
+							<img src="/static/pic/gpu.png" alt="">
+						</div>
+						{{g['name']}}
+					</a>
+					{% for p in processes %}
+					{% if p['gpu_name']==g['name'] %}
+					<div class="index_coursebox">
+						<a href="/process_teacher/{{p['id']}}/">
+							<div class="index_img">
+								<img src="/static/pic/process_.png" alt="">
+							</div>
+							{{p['name']}}
+						</a>
+					</div>
+					{% endif %}
+					{% endfor %}
+					<p class="index_box_no">--没有更多进程--</p>
+				</div>
+				{% endif %}
+				{% endfor %}
+				{% endif %}
+				{% endfor %}
+				{% endfor %}
+
+
+
+
+				<!--<p class="index_box_no">&nbsp;--没有更多GPU--</p>-->
+			</div>
+
 		</div>
 
-	</div>
 </body>
+
 </html>
-				
