--- a/watchlist/templates/teacher_notice.html
+++ b/watchlist/templates/teacher_notice.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Notice</title>
-	<link rel="stylesheet" href="/static/style_teacher.css" />
+	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
 	{% for message in get_flashed_messages() %}
@@ -19,18 +19,15 @@
 	        </div>
 
 			<div id="other">
-				<div id="userinfo">
-					<select name="user" id="user" onchange="window.location=this.value;">
-						<option selected="selected" value="0" class="userselect">
-							<span>{{ current_user.username }}</span>
-						</option>
-						<option value="/teacher_notice/" class="userselect">通知</option>
-						<option value="/logout/" class="userselect">退出登录</option>
-					</select>
-				</div>
-				<div id="user_img">
-					<img src="{{ current_user.pic_path }}" alt="image">
-				</div>				
+				<form form method="POST" action="/logout/">
+					<a id="login_out" href="/logout/" class="button">退出登录</a>
+					<div id="user_img">
+						<img src="{{ current_user.pic_path }}" alt="image">
+					</div>
+					<div id="user_name">
+						<span>{{ current_user.username }}</span>
+					</div>
+				</form>			
 			</div>
 		</div>
 
@@ -60,7 +57,7 @@
 						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/GPUs/">GPU列表</a>
+						<a href="/process_teacher/">GPU列表</a>
 					</div>
 				</div>
 
@@ -75,192 +72,37 @@
 			</div>
 
 			<div id="content">
+				{% for r in relations %}
+				{% for c in courses %}
+				{% if r['course_name']==c['name'] %}
 				<div id="coure_notice" class="index_box">
-					<a href="/my_courses_teacher/1/">
+					<a href="/my_courses_teacher/{{c['id']}}/">
 						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
+							<img src="/static/pic/courses.png" alt="">
 						</div>
-						<p>程序设计</p>
+						<p>{{ c['name'] }}</p>
 					</a>
-					<form method="POST" action="/teacher_notice_new/">
+					<form method="POST" action="/teacher_notice_new/{{c['id']}}/">
 						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
 					</form>
+					{% for m in messages %}
+					{% if m['course_name'] == c['name'] %}
 					<div class="index_coursebox">
-						<a href="/teacher_notice/1/">
+						<a href="/teacher_notice/{{ m['id'] }}/">
 							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
+								<img src="/static/pic/message_.png" alt="">
 							</div>
-							<span>通知1</span>
+							<span>{{ m['title'] }}</span>
 						</a>
 					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/2/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/3/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
+					{% endif %}
+					
+					{% endfor %}
+					<p style="clear:both;text-align:center;margin:10px;">--没有更多消息--</p>
 				</div>
-
-				<div id="coure_notice" class="index_box">
-					<a href="/my_courses_teacher/2/">
-						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
-						</div>
-						<p>机器学习</p>
-					</a>
-					<form method="POST" action="/teacher_notice_new/">
-						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
-					</form>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/1/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知1</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/2/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/3/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
-				</div>
-
-				<div id="coure_notice" class="index_box">
-					<a href="/my_courses_teacher/3/">
-						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
-						</div>
-						<p>人工智能</p>
-					</a>
-					<form method="POST" action="/teacher_notice_new/">
-						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
-					</form>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/1/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知1</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/2/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/3/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
-				</div>
-
-				<div id="coure_notice" class="index_box">
-					<a href="/my_courses_teacher/4/">
-						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
-						</div>
-						<p>人工神经网络</p>
-					</a>
-					<form method="POST" action="/teacher_notice_new/">
-						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
-					</form>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/1/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知1</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/2/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/3/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
-				</div>
-
-				<div id="coure_notice" class="index_box">
-					<a href="/my_courses_teacher/5/">
-						<div class="index_img">
-							<img src="../static/pic/courses.png" alt="">
-						</div>
-						<p>xxx实验室</p>
-					</a>
-					<form method="POST" action="/teacher_notice_new/">
-						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
-					</form>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/1/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知1</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/2/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知2</span>
-						</a>
-					</div>
-					<div class="index_coursebox">
-						<a href="/teacher_notice/3/">
-							<div class="index_img">
-								<img src="../static/pic/message_.png" alt="">
-							</div>
-							<span>通知3</span>
-						</a>
-					</div>
-					<p class="index_box_no">--没有更多通知--</p>
-				</div>
-
-				<p style="clear:both;text-align:center;margin:10px;">--没有更多课程--</p>				
+				{% endif %}
+				{% endfor %}	
+				{% endfor %}		
 			</div>
 		</div>
 
