教师端process_teacher+notice 和 学生端notice的一些改动

--- a/watchlist/templates/course_student.html
+++ b/watchlist/templates/course_student.html
@@ -78,7 +78,9 @@
 			<div id="content">
 				<div id="notice_xxx">
 					<p>选课情况</p>
-					  请注意导入学生列表的文件必须是csv文件，只有一列，并且第一行需为行名（如“学号”等），数据需为真实学号！导入后刷新页面即可看到完整的学生名单~
+					  <p style="font-size:16px; text-align:left;text-indent:2em;font-weight:normal;">
+					  	请注意导入学生列表的文件必须是csv文件，只有一列，并且第一行需为行名（如“学号”等），数据需为真实学号！导入后刷新页面即可看到完整的学生名单~
+					  </p>
 					<div id="notice_xxx_xxx">
 						{% for r in relations %}
 						&nbsp;{{ r['user_name'] }}&nbsp; 
