--- a/watchlist/templates/stu_notice_xxx.html
+++ b/watchlist/templates/stu_notice_xxx.html
@@ -93,7 +93,7 @@
 						<div id="notice_xxx_xxx">
 							{{ message['info'] }}
 						</div>
-						<input id="notice_button" type="submit" class="button is-info" value="已查看">
+						<!-- <input id="notice_button" type="submit" class="button is-info" value="已查看"> -->
 					</div>
 				</form>
 			</div>
