学生端的一些修改 pzq 6.22

--- a/watchlist/templates/process.html
+++ b/watchlist/templates/process.html
@@ -79,6 +79,7 @@
 							<img src="/static/pic/process_.png" alt="">
 						</div>
 						{{ p['name'] }} - in {{ p['gpu_name'] }}
+						<span style="font-weight:normal;">(xxx课程)</span>
 					</a>
 					<div class="programsum">
 						<p>{{ p['info'] }}</p>
