--- a/watchlist/templates/stu_notice_xxx.html
+++ b/watchlist/templates/stu_notice_xxx.html
@@ -88,7 +88,7 @@
 							{{ message['course_name'] }}通知
 						</p>
 						<p style="font-size:20px;margin:3px;">
-							标题：{{ message['title'] }}
+							&nbsp【{{ message['title'] }}】
 						</p>
 						<div id="notice_xxx_xxx">
 							{{ message['info'] }}
