--- a/watchlist/templates/my_courses.html
+++ b/watchlist/templates/my_courses.html
@@ -101,13 +101,13 @@
 				<div id="add" class="index_box">
 					<a href="/my_courses/all_courses/">
 						<div class="index_img">
-							<img src="/static/pic/look.png" alt="">
+							<img src="/static/pic/add.png" alt="">
 						</div>
-						<p>看看别的课程</p>
+						<p>添加课程</p>
 					</a>
 					<div id="xxxinfo" class="information">
-						<div class="index_img" style="margin-top:-2px;">
-							<img src="/static/pic/look_.png" alt="">
+						<div class="index_img">
+							<img src="/static/pic/look.png" alt="">
 						</div>
 						<p>看看还有什么其他课程</p>
 					</div>
