--- a/watchlist/templates/process_xxx.html
+++ b/watchlist/templates/process_xxx.html
@@ -73,12 +73,6 @@
 
 			<div id="content">
 				<div id="result1">
-					<a id="re_edit" href="/" class="button" style="margin-right:5px;margin-top:-2px;">
-						返回xxx课程页面
-						<div class="asidepic" style="margin:3px -2px;">
-							<img src="/static/pic/back.png" alt="">
-						</div>
-					</a>
 					<p style="font-weight:bold;margin-bottom:5px;">
 						{{ process.name }} - {{ process.info }} - 运行情况
 					</p>
@@ -90,10 +84,7 @@
 				</div>
 
 				<div id="result2">
-					<a id="re_edit" href="/" class="button" style="margin-right:72%;">
-						删除进程
-					</a>
-					<a id="re_edit" href="/process_edit/{{ process.id }}/" class="button" style="margin-right:20px;">
+					<a id="re_edit" href="/process_edit/{{ process.id }}/" class="button">
 						修改代码
 					</a>
 					<p style="font-weight:bold;margin-bottom:5px;">
