--- a/watchlist/templates/course_xxx.html
+++ b/watchlist/templates/course_xxx.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Course</title>
+	<title>GPU管理系统【课程页】</title>
 	<link rel="stylesheet" href="/static/style_student.css" />
 </head>
 <body>
@@ -119,6 +119,7 @@
 						</div>
 						<span>
 							GPUs
+							<span style="font-weight:normal;font-size:18px;">(提交新的程序)</span>
 						</span>
 						{% for gc in gpuc %}
 						{% for g in gpus %}
