--- a/watchlist/templates/my_courses.html
+++ b/watchlist/templates/my_courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My courses</title>
+	<title>GPU管理系统【我的课程】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
@@ -101,13 +101,13 @@
 				<div id="add" class="index_box">
 					<a href="/my_courses/all_courses/">
 						<div class="index_img">
-							<img src="/static/pic/add.png" alt="">
+							<img src="/static/pic/look.png" alt="">
 						</div>
-						<p>添加课程</p>
+						<p>看看别的课程</p>
 					</a>
 					<div id="xxxinfo" class="information">
-						<div class="index_img">
-							<img src="/static/pic/look.png" alt="">
+						<div class="index_img" style="margin-top:-2px;">
+							<img src="/static/pic/look_.png" alt="">
 						</div>
 						<p>看看还有什么其他课程</p>
 					</div>
