--- a/watchlist/templates/process.html
+++ b/watchlist/templates/process.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Progress</title>
+	<title>GPU管理系统【我的进程】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
@@ -79,6 +79,7 @@
 							<img src="/static/pic/process_.png" alt="">
 						</div>
 						{{ p['name'] }} - in {{ p['gpu_name'] }}
+						<span style="font-weight:normal;">(xxx课程)</span>
 					</a>
 					<div class="programsum">
 						<p>{{ p['info'] }}</p>
