--- a/watchlist/templates/process_edit.html
+++ b/watchlist/templates/process_edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Programm1-Result</title>
+	<title>GPU管理系统【进程修改】</title>
 	<link rel="stylesheet" href="/static/style_student.css" />
 </head>
 <body>
