--- a/watchlist/templates/stu_notice.html
+++ b/watchlist/templates/stu_notice.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>notice</title>
+	<title>GPU管理系统【通知】</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
