--- a/watchlist/templates/submit.html
+++ b/watchlist/templates/submit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Settings</title>
+	<title>GPU管理系统【提交进程】</title>
 	<link rel="stylesheet" href="/static/style_student.css" />
 </head>
 <body>
@@ -90,10 +90,13 @@
 				<form method="POST" action="/">
 					<div id="ssh">
 						<p>
-							<strong>SSH方式</strong>
-							<input id="ssh_button" type="submit" class="#" value="提交">
+							<strong>SSH</strong>
+							<!-- <input id="ssh_button" type="submit" class="#" value="提交"> -->
 						</p>						
-						<input id="ssh_text" type="text" name="SSH方式" required style="height:2em;width:100%;margin-top:3px;background:rgba(255,255,255,0.7);border-radius:5px;border:1px solid white;">
+						<input id="ssh_text" type="text" name="SSH方式" required style="height:2em;width:23%;margin-top:3px;background:rgba(255,255,255,0.7);border-radius:5px;border:1px solid white;text-align: center;" placeholder="请输入IP">
+						<input id="ssh_text" type="text" name="SSH方式" required style="height:2em;width:23%;margin-top:3px;background:rgba(255,255,255,0.7);border-radius:5px;border:1px solid white;text-align: center;margin-left:5px;" placeholder="请输入port">
+						<input id="ssh_text" type="text" name="SSH方式" required style="height:2em;width:23%;margin-top:3px;background:rgba(255,255,255,0.7);border-radius:5px;border:1px solid white;text-align: center;margin-left:5px;" placeholder="请输入user_name">
+						<input id="ssh_text" type="text" name="SSH方式" required style="height:2em;width:23%;margin-top:3px;background:rgba(255,255,255,0.7);border-radius:5px;border:1px solid white;text-align: center;margin-left:5px;" placeholder="请输入password">
 					</div>
 				</form>
 				
@@ -110,7 +113,7 @@
 						<p>
 							<strong>代码编辑器</strong>
 						</p>
-						<textarea id="edit_text" name="edit" cols="140" rows="18">请输入代码</textarea>
+						<textarea id="edit_text" name="edit" cols="140" rows="18" placeholder="请输入代码..."></textarea>
 						<input id="edit_button" type="submit" class="#" value="运行">
 					</div>
 				</form>
