--- a/watchlist/templates/process_xxx.html
+++ b/watchlist/templates/process_xxx.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Programm1-Result</title>
+	<title>GPU管理系统【进程结果】</title>
 	<link rel="stylesheet" href="/static/style_student.css" />
 </head>
 <body>
@@ -73,6 +73,12 @@
 
 			<div id="content">
 				<div id="result1">
+					<a id="re_edit" href="/" class="button" style="margin-right:5px;margin-top:-2px;">
+						返回xxx课程页面
+						<div class="asidepic" style="margin:3px -2px;">
+							<img src="/static/pic/back.png" alt="">
+						</div>
+					</a>
 					<p style="font-weight:bold;margin-bottom:5px;">
 						{{ process.name }} - {{ process.info }} - 运行情况
 					</p>
@@ -84,7 +90,10 @@
 				</div>
 
 				<div id="result2">
-					<a id="re_edit" href="/process_edit/{{ process.id }}/" class="button">
+					<a id="re_edit" href="/" class="button" style="margin-right:72%;">
+						删除进程
+					</a>
+					<a id="re_edit" href="/process_edit/{{ process.id }}/" class="button" style="margin-right:20px;">
 						修改代码
 					</a>
 					<p style="font-weight:bold;margin-bottom:5px;">
