--- a/watchlist/templates/settings.html
+++ b/watchlist/templates/settings.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Settings</title>
+	<title>GPU管理系统【设置】</title>
 	<link rel="stylesheet" href="/static/style_student.css" />
 </head>
 <body>
