--- a/watchlist/templates/stu_notice_xxx.html
+++ b/watchlist/templates/stu_notice_xxx.html
@@ -76,7 +76,7 @@
 					<div id="notice_xxx">
 						{% for c in courses %}
 						{% if c['name'] == message['course_name'] %}
-						<a href="/my_courses/all_courses/{{ c['id'] }}/" class="button">
+						<a href="/my_courses/all_courses/{{ c['id'] }}" class="button">
 							返回课程页面
 							<div class="asidepic" style="margin:5px 2px;">
 								<img src="/static/pic/back.png" alt="">
